--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.0",
+    "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
 }
