--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   },
   "homepage": "https://github.com/evantides/the-meme-exchange#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
+    "google-trends-api": "^4.9.0",
+    "js-cookie": "^2.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.0",
     "nodeyourmeme": "^2.0.0",
