--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "js-cookie": "^2.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.0",
+    "node-schedule": "^1.3.2",
     "nodeyourmeme": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
