--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.10.0",
     "node-schedule": "^1.3.2",
-    "nodeyourmeme": "^2.0.0",
+    "nodeyourmeme": "https://github.com/evantides/nodeyourmeme/tarball/master",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
